--- a/Frontend/Components/Layout/NavMenu.razor
+++ b/Frontend/Components/Layout/NavMenu.razor
@@ -33,6 +33,9 @@
             <NavLink class="nav-link" href="Login">
                 🔐 Entrar
             </NavLink>
+            <NavLink class="nav-link" href="eligible-talents">
+                ✅ Eligible Work Proposals
+            </NavLink>
         </div>
     </nav>
 </div>
