--- a/Frontend/Components/Pages/AddUsers.razor
+++ b/Frontend/Components/Pages/AddUsers.razor
@@ -157,7 +157,7 @@ else
             else
             {
                 // Verificar se tem RoleId == 1; se não tiver, negar acesso
-                if (UserSession.RoleId != 1)
+                if (UserSession.RoleId != 1 && UserSession.RoleId != 2)
                 {
                     accessDenied = true;
                     StateHasChanged();
